# api/src/main/resources/openapi.yaml
@@ -493,27 +493,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/SharedFileObject'
-  /v3/files/transfers:
-    post:
-      tags:
-      - transfers
-      summary: Transfer data
-      description: This creates a background task which will transfer files into the
-        storage system
-      operationId: createTransferTask
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/TransferTaskRequest'
-        required: true
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TransferTaskResponse'
   /v3/files/transfers/{transferTaskId}:
     get:
       tags:
@@ -570,6 +549,27 @@ paths:
           type: string
           format: uuid
         example: 6491c2a5-acb2-40ef-b2c0-bc1fc4cd7e6c
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TransferTaskResponse'
+  /v3/files/transfers:
+    post:
+      tags:
+      - transfers
+      summary: Transfer data
+      description: This creates a background task which will transfer files into the
+        storage system
+      operationId: createTransferTask
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TransferTaskRequest'
+        required: true
       responses:
         200:
           description: OK
@@ -637,6 +637,17 @@ components:
             $ref: '#/components/schemas/FileInfo'
         version:
           type: string
+    FilePermissionStringResponse:
+      type: object
+      properties:
+        status:
+          type: string
+        message:
+          type: string
+        result:
+          type: string
+        version:
+          type: string
     FilePermission:
       type: object
       properties:
@@ -663,17 +674,6 @@ components:
           type: string
         result:
           $ref: '#/components/schemas/FilePermission'
-        version:
-          type: string
-    FilePermissionStringResponse:
-      type: object
-      properties:
-        status:
-          type: string
-        message:
-          type: string
-        result:
-          type: string
         version:
           type: string
     SharedFileObject:
@@ -737,6 +737,52 @@ components:
           format: int64
         status:
           type: string
+        parentTasks:
+          type: array
+          items:
+            $ref: '#/components/schemas/TransferTaskParent'
+    TransferTaskParent:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        tenantId:
+          type: string
+        username:
+          type: string
+        sourceURI:
+          type: string
+        destinationURI:
+          type: string
+        totalBytes:
+          type: integer
+          format: int64
+        bytesTransferred:
+          type: integer
+          format: int64
+        taskId:
+          type: integer
+          format: int32
+        startTime:
+          type: integer
+          format: int64
+        endTime:
+          type: integer
+          format: int64
+        uuid:
+          type: string
+          description: Unique ID of the task.
+          format: uuid
+        status:
+          type: string
+          description: The status of the task, such as ACCEPTED, IN_PROGRESS, COMPLETED,
+            CANCELLED
+          example: PENDING
+        created:
+          type: integer
+          description: Timestamp in UTC of task creation.
+          format: int64
     TransferTaskResponse:
       type: object
       properties:
@@ -746,6 +792,17 @@ components:
           type: string
         result:
           $ref: '#/components/schemas/TransferTask'
+        version:
+          type: string
+    TapisResponse:
+      type: object
+      properties:
+        status:
+          type: string
+        message:
+          type: string
+        result:
+          type: object
         version:
           type: string
     TransferTaskRequest:
@@ -771,14 +828,3 @@ components:
         destinationURI:
           type: string
           description: Fully qualified URI to a tapis system, such as tapis://{systemID}/{path}
-    TapisResponse:
-      type: object
-      properties:
-        status:
-          type: string
-        message:
-          type: string
-        result:
-          type: object
-        version:
-          type: string
